constaint checks added

--- a/frontend/condition.html
+++ b/frontend/condition.html
@@ -107,10 +107,10 @@
 	<!-- Start Sample Area -->
 	<section class="sample-text-area">
 		<div class="container box_1170 border-top-generic">
-			<h3 class="text-heading">Condition Browse</h3>
+			<h3 class="text-heading">Browse Condition-wise</h3>
 				<p class="sample-text">
-					Browsing through the complete database of genes that play a key role at the specified tissue 
-					level when exposed through different abiotic stress conditions or phytohormone changes.
+					Allows the user to browse the genes and their attributes that are differentially 
+					expressed in a given tissue type  or stress condition.
 				</p>
 
 			<div>
