--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
                             <div class="row d-flex align-items-center">
                                 <div class="col-lg-6 col-md-9 ">
                                     <div class="hero__caption">
-                                        <span data-animation="fadeInUp" data-delay=".4s" >Test Rice Expression Analysis Server</span>
+                                        <span data-animation="fadeInUp" data-delay=".4s" >Rice Expression Analysis Server</span>
                                         <h1 data-animation="fadeInUp" data-delay=".6s" >Explore Rice Genes<br>with NetREx</h1>
                                         <p data-animation="fadeInUp" data-delay=".8s" style="color: black;">A Network-based Rice Expression Analysis Server for Abiotic Stress Conditions and Hormonal Treatments.</p>
                                        <div class="slider-btns">
