--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,16 +88,16 @@
             <!-- Slider Area Start-->
             <div class="slider-area ">
                 <div class="slider-active">
-                    <div class="single-slider slider-height slider-padding sky-blue d-flex align-items-center">
+                    <div class="single-slider slider-height slider-padding sky-blue d-flex align-items-center" style="height: 100vh;">
                         <div class="container">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-lg-6 col-md-9 ">
+                            <div class="row d-flex">
+                                <div class="col-lg-6 col-md-9">
                                     <div class="hero__caption">
-                                        <span data-animation="fadeInUp" data-delay=".4s" >Rice Expression Analysis Server</span>
-                                        <h1 data-animation="fadeInUp" data-delay=".6s" >Explore Rice Genes<br>with NetREx</h1>
-                                        <p data-animation="fadeInUp" data-delay=".8s" style="color: black;">A Network-based Rice Expression Analysis Server for Abiotic Stress Conditions and Hormonal Treatments.</p>
+                                        <span data-animation="fadeInUp" data-delay=".4s" >Network-Based Rice Expression Analysis Server</span>
+                                        <h1 data-animation="fadeInUp" data-delay=".6s" >Explore Expressions and Interactions of Rice Genes Under Various Abiotic Stresses and Hormone Treatment Conditions</h1>
+                                        <!-- <p data-animation="fadeInUp" data-delay=".8s" style="color: black;">A Network-based Rice Expression Analysis Server for Abiotic Stress Conditions and Hormonal Treatments.</p> -->
                                        <div class="slider-btns">
-                                            <a data-animation="fadeInLeft" data-delay="1.0s" href="query.html" class="btn radius-btn">Query</a>
+                                            <a data-animation="fadeInLeft" data-delay="1.0s" href="query.html" class="btn radius-btn" style="font-weight: bold;">Query</a>
                                        </div>
                                     </div>
                                 </div>
