--- a/frontend/query.html
+++ b/frontend/query.html
@@ -97,14 +97,13 @@
 	<section class="sample-text-area">
 		<div class="container" id="network-viewer">
 				<p>
-                	Submit a set of genes to view their network representation at different time-point for
-					different stress/hormone treatments, for root/shoot tissue in rice.
+                	Submit RAP ID of genes to be queried and select appropriate tissue and stress/hormone treatments.
 				</p>
 				<br>
 				<div>
 					<form class="form-contact" id="query-form" action="/netrex/validate.html" method="get">
 						<div class="row">
-							<div class="input-group-icon col-sm-3"><p>Species : </p></div>
+							<div class="input-group-icon col-sm-3"><p style="font-weight: bold;">Species : </p></div>
 							<div class="input-group-icon col-sm-8">
 								<div class="icon"><i class="fa fa-leaf" aria-hidden="true"></i></div>
 								<div class="form-select" id="speciesHead">
@@ -119,7 +118,7 @@
 								</div>
 							</div>
 
-							<div class="input-group-icon col-sm-3"><p>Tissue : </p></div>
+							<div class="input-group-icon col-sm-3"><p style="font-weight: bold;">Tissue : </p></div>
 							<div class="input-group-icon col-sm-8">
 								<div class="icon"><i class="fas fa-microscope" aria-hidden="true"></i></div>
 								<div class="form-select" id="tissueHead">
@@ -130,7 +129,7 @@
 								</div>
 							</div>
 
-							<div class="input-group-icon col-sm-3"><p>Stress / Hormone Treatment : </p></div>
+							<div class="input-group-icon col-sm-3"><p style="font-weight: bold;">Stress / Hormone Treatment : </p></div>
 							<div class="input-group-icon col-sm-8">
 								<div class="icon"><i class="fas fa-cloud-sun-rain" aria-hidden="true"></i></div>
 								<div class="form-select" id="conditionHead">
@@ -164,7 +163,7 @@
 			</div>
 		</div>
 
-		<div class="container" id="module-viewer">
+		<!-- <div class="container" id="module-viewer">
 			<div class="section-top-border"></div>
 			<h3 class="text-heading">NetREx Browse</h3>
 				<p class="sample-text">
@@ -187,7 +186,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</section>
     <!-- End Sample Area -->
 
