added gene name and label threshold 0 for simple viewer

--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -479,6 +479,7 @@
 <script src='./sigma/sigma.plugins.animate.js'></script>
 <script src='./sigma/sigma.layout.noverlap.js'></script>
 <script src="./sigma/sigma.renderers.snapshot.js"></script>
+<script src="./assets/js/jquery.csv.min.js"></script>
 <script src="./assets/js/load_graph.js"></script>
 <script src="./assets/js/load_neighbour_graph.js"></script>
 
